testsuite/tests/rename/should_fail/T15659.hs
module T15659 where

{-# RULES "test" forall x. f x  = x #-}


