testsuite/tests/rename/should_fail/T15659.stderr

T15659.hs:3:11: error:
    Rule "test":
      Not in scope: ‘f’
      in left-hand side: f x
    LHS must be of form (f e1 .. en) where f is not forall'd
